Fix sign up and welcome page alignment on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,6 +804,7 @@ footer a {
     #container-border {
         width: 100%;
         height: 60%;
+        padding: 0;
         padding: 20px 0;
         margin-top: 20%;
 
@@ -811,6 +812,10 @@ footer a {
         border-radius: 0;
         border-bottom: 1px solid #f3f3f3;
         border-top: 1px solid #f3f3f3;
+    }
+
+    .form-container {
+        height: 80%;
     }
 }
 
@@ -916,7 +921,6 @@ footer a {
     /* form */
     .form-container {
         width: 100%;
-        padding: 16px;
         border-radius: 0;
     }
 
